--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <title>Fishing Game</title>
     </head>
     <body>
-        <div class="rectangle"></div>
+        <canvas></canvas>
+        <div class="rectangle" id="rect"></div>
         <div class="target"></div>
         <div class="circle" id="circle"></div>
         <script src="script.js"></script>
