can move background

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="rectangle" id="rect"></div>
         <div class="target"></div>
         <div class="circle" id="circle"></div>
+        <script src="fishies.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
