collision detection and marked fish spots

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="target"></div>
         <div class="circle" id="circle"></div>
         <script src="fishies.js"></script>
+        <script src="collisions.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
