--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
         <title>Fishing Game</title>
     </head>
     <body>
-        <canvas></canvas>
-        <div class="rectangle" id="rect"></div>
-        <div class="target"></div>
-        <div class="circle" id="circle"></div>
+        <div>
+            <div class="meter">
+                <div class="rectangle" id="rect"></div>
+                <div class="target"></div>
+                <div class="circle" id="circle"></div>
+            </div>
+            <canvas></canvas>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="fishies.js"></script>
         <script src="collisions.js"></script>
         <script src="script.js"></script>
