--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
                 <div class="rectangle" id="rect"></div>
                 <div class="target"></div>
                 <div class="circle" id="circle"></div>
+                <button id="button" type="button">Reel in Fish</button> 
             </div>
             <canvas></canvas>
+        </div>
+        <div id="instructions">
+            <p>move boat with WASD</p>
+            <p>click on bubbles for fish</p>
+            <p>click on "Reel in Fish" button 5 times when the pink circle is in the green center to catch fish</p>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="fishies.js"></script>
