added progress bar

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
         <title>Fishing Game</title>
     </head>
     <body>
+        <h1>Fishing Game</h1>
         <div>
             <div class="meter">
                 <div class="rectangle" id="rect"></div>
                 <div class="target"></div>
                 <div class="circle" id="circle"></div>
+                <div id="progress"></div>
+                <div id="green-bar"></div>
                 <button id="button" type="button">Reel in Fish</button> 
             </div>
             <canvas></canvas>
         </div>
         <div id="instructions">
             <p>move boat with WASD</p>
-            <p>click on bubbles for fish</p>
-            <p>click on "Reel in Fish" button 5 times when the pink circle is in the green center to catch fish</p>
+            <p>click on bubbles for fish, click on "Reel in Fish" button 5 times when the pink circle is in the green center to catch fish</p>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="fishies.js"></script>
