--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="circle" id="circle"></div>
                 <div id="progress"></div>
                 <div id="green-bar"></div>
-                <button id="button" type="button">Reel in Fish</button> 
+                <button id="button" type="button" disabled>Reel in Fish</button> 
             </div>
             <canvas></canvas>
         </div>
