--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p>move boat with WASD</p>
             <p>click on bubbles for fish, click on "Reel in Fish" button when the pink circle is in the green center to catch fish</p>
         </div>
+        <embed src="audio/sailing_away.wav" loop="true" autostart="true" width="2" height="0"> 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="fishies.js"></script>
         <script src="collisions.js"></script>
