--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <title>Fishing Game</title>
     </head>
     <body>
-        <h1>Fishing Game</h1>
+
+        <h1>Gone Fishing</h1>
+
+        <!-- Fishing meter and Canvas -->
         <div>
             <div class="meter">
                 <div class="rectangle" id="rect"></div>
@@ -20,14 +23,18 @@
             </div>
             <canvas></canvas>
         </div>
+
         <div id="instructions">
-            <p>move boat with WASD</p>
-            <p>click on bubbles for fish, click on "Reel in Fish" button when the pink circle is in the green center to catch fish</p>
+            <p>Boat around the map using W A S D keys. Clicking on bubbles will reveal a fishing spot. To cath a fish,</br> click the 'Reel in Fish' button when the pink ball aligns with the green target. Try finding all 5 fish!</p>
         </div>
+        
+        <!-- Howler Library for audio -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- gsap Library for fading animations -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="fishies.js"></script>
         <script src="collisions.js"></script>
         <script src="script.js"></script>
+
     </body>
 </html>
