some code cleaning

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
 
         <div id="instructions">
-            <p>Boat around the map using W A S D keys. Clicking on bubbles will reveal a fishing spot. To cath a fish,</br> click the 'Reel in Fish' button when the pink ball aligns with the green target. Try finding all 5 fish!</p>
+            <p>Boat around the map using W A S D keys. Clicking on bubbles will reveal a fishing spot. To catch a fish,</br> click the 'Reel in Fish' button when the pink ball aligns with the green target. Try finding all 5 fish!</p>
         </div>
-        
+
         <!-- Howler Library for audio -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- gsap Library for fading animations -->
