final commit for  project presentation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <div id="instructions">
             <p>Boat around the map using W A S D keys. Clicking on bubbles will reveal a fishing spot. To catch a fish,</br> click the 'Reel in Fish' button when the pink ball aligns with the green target. Try finding all 5 fish!</p>
+            <p id="note">*If you resize your browser after opening the game, refresh for the game to work properly.</p>
         </div>
 
         <!-- Howler Library for audio -->
